gccida/g0/recog_10
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11159:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1 = ( rtx)x0[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11172:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x3d; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11173:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3e = (  struct rtx_def *)x2[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11176:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3e; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11180:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3f; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11181:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2d = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11186:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[1]->fld[0].rtwint + recog_data_0.operand[2]->fld[0].rtwint <= 63 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11186:45: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[1]->fld[0].rtwint + recog_data_0.operand[2]->fld[0].rtwint <= 63 
                                            ^~~~~~~~~~~~
                                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11187:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( recog_data_0.operand[1]->fld[0].rtwint + recog_data_0.operand[2]->fld[0].rtwint <= 32 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11187:47: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( recog_data_0.operand[1]->fld[0].rtwint + recog_data_0.operand[2]->fld[0].rtwint <= 32 
                                              ^~~~~~~~~~~~
                                              recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11188:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| recog_data_0.operand[1]->fld[0].rtwint + recog_data_0.operand[2]->fld[0].rtwint == 64 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11188:45: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| recog_data_0.operand[1]->fld[0].rtwint + recog_data_0.operand[2]->fld[0].rtwint == 64 
                                            ^~~~~~~~~~~~
                                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11189:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& recog_data_0.operand[1]->fld[0].rtwint > 32) 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11190:19: error: use of undeclared identifier 'recog_data_0'
&& ( *( ( _BYTE *)recog_data_0.operand[0] + 2) == 4 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11191:17: error: use of undeclared identifier 'recog_data_0'
|| *( ( _BYTE *)recog_data_0.operand[0] + 2) == 5 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11192:17: error: use of undeclared identifier 'recog_data_0'
|| *( ( _BYTE *)recog_data_0.operand[0] + 2) == 3 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11193:17: error: use of undeclared identifier 'recog_data_0'
|| *( ( _BYTE *)recog_data_0.operand[0] + 2) == 2) ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11212:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/insn-recog.c:11213:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2a = (  struct rtx_def *)x1[1]; 
                          ^~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_10/src/obj/insn-recog.o] Error 1
